# dual_arm_manipulation

./: .gitignore  README.md  readme.txt  readme.txt~
Setup/: git.sh  ros.sh  ros.sh~
admittance_control/: .clang-format  CMakeLists.txt  package.xml
admittance_control/config/: admittance_params.yaml  admittance_params_real.yaml
admittance_control/include/: AdmittanceController.h
admittance_control/launch/: admittance_controller.launch  admittance_controller_real.launch  cpr_record_demo_node.launch
admittance_control/src/: AdmittanceController.cpp  admittance_controller_node.cpp  cpr_ee_state_splitter_node.cpp  demonstration_recorder_node.cpp
dual_arm_manipulation/: README.md
dual_arm_manipulation/Setup/: ros.sh  ros.sh~
dual_arm_manipulation/dual_arm_robot_applications/: CMakeLists.txt  package.xml  tf_transformation_for_robots
dual_arm_manipulation/dual_arm_robot_applications/include/dual_arm_demonstrator_iml/: DualArmRobot.h  FTSensorSubscriber.h  SceneManager.h
dual_arm_manipulation/dual_arm_robot_applications/include/dual_arm_toolbox/: TrajectoryProcessor.h  Transform.h
dual_arm_manipulation/dual_arm_robot_applications/include/ur_logging/: Stopwatch.h  UrLogger.h  UrMessageListener.h
dual_arm_manipulation/dual_arm_robot_applications/launch/: dual_arm_robot_admittance_controller.launch  dual_arm_robot_bringup.launch  dual_arm_robot_cartesian_bringup.launch  dual_arm_robot_offline_rviz.launch  dual_arm_robot_ros_control_rviz.launch  dual_arm_robot_rviz.launch  robotiq_2Finger_action_server.launch  ur5_ros_control_hi.launch  ur5_ros_control_rviz.launch  ur5_rviz.launch
dual_arm_manipulation/dual_arm_robot_applications/src/: dual_arm_robot_vel_force_experiment.cpp  left_force_hold_exp.cpp  right_force_hold_exp.cpp  ur5_cartesian_velocity_controller_test.cpp  ur5_jacobian.cpp  ur5_joint_speed.cpp
dual_arm_manipulation/dual_arm_robot_applications/src/dual_arm_demonstrator_iml/: DualArmRobot.cpp  FTSensorSubscriber.cpp  SceneManager.cpp
dual_arm_manipulation/dual_arm_robot_applications/src/dual_arm_toolbox/: TrajectoryProcessor.cpp  Transform.cpp
dual_arm_manipulation/dual_arm_robot_applications/src/executables/: demonstration_setup_helper.cpp  dual_arm_robot_cartesian_velocity.cpp  dual_arm_robot_demonstration.cpp  dual_arm_robot_grasp_experiment.cpp  dual_arm_robot_lift_experiment_force.cpp  dual_arm_robot_lift_experiment_force_1.cpp  dual_arm_robot_lift_experiment_force_2.cpp  dual_arm_robot_lift_experiment_planning.cpp  dual_arm_robot_logger.cpp  dual_arm_robot_moveHome.cpp
dual_arm_manipulation/dual_arm_robot_applications/src/ur_logging/: Stopwatch.cpp  UrLogger.cpp  UrMessageListener.cpp
dual_arm_manipulation/dual_arm_robot_driver/: CMakeLists.txt  package.xml
dual_arm_manipulation/dual_arm_robot_driver/config/: left_cartesian_velocity_controller.yaml  left_controllers.yaml  right_cartesian_velocity_controller.yaml  right_controllers.yaml  ur5_controllers.yaml
dual_arm_manipulation/dual_arm_robot_driver/launch/: dual_arm_robot_bringup.launch  dual_arm_robot_bringup_ros_control.launch
dual_arm_manipulation/dual_arm_robot_moveit_config/: .setup_assistant  package.xml
dual_arm_manipulation/joint_trajectory_admittance_controller/: CMakeLists.txt  CMakeLists.txt~  package.xml
dual_arm_robot_applications/: CMakeLists.txt  package.xml  tf_transformation_for_robots  tf_transformation_for_robots~
dual_arm_robot_applications/launch/: dual_arm_robot_bringup.launch  dual_arm_robot_offline_rviz.launch  dual_arm_robot_ros_control_rviz.launch  dual_arm_robot_ros_control_start.launch  dual_arm_robot_rviz.launch  dual_arm_robot_tcp_wrench_publisher.launch  ur10_ros_control_rviz.launch  ur5_olddriver_rviz.launch  ur5_ros_control_hi.launch  ur5_ros_control_rviz.launch
dual_arm_robot_applications/src/: dual_arm_robot_vel_force_experiment.cpp  (+1 more)
dual_arm_robot_description/: package.xml
dual_arm_robot_driver/: CMakeLists.txt  package.xml
dual_arm_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
joint_trajectory_admittance_controller/: CMakeLists.txt  package.xml
my_cart_controller_pkg/: package.xml
my_controller_pkg/: package.xml
ur5_cartesian_velocity_control/: ur5_cartesian_velocity_control_plugin.xml
ur_modern_driver/: README.md
(+140 files in other folders)
