<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>dual_arm_robot_applications</name>
  <version>1.0.0</version>
  <description> Applications for the dual arm robot </description>

  <author>Chunting Jiao</author>
  <maintainer email="jiaochunting@gmail.com">Tsinghua University</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>industrial_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>ur_msgs</depend>
  <depend>tf</depend>
  <depend>std_srvs</depend>
  <depend>robotiq_ft_sensor</depend>

  <exec_depend>force_torque_sensor_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>cartesian_state_msgs</exec_depend>


</package>
