<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>dual_arm_robot_driver</name>
  <version>0.1.0</version>
  <description>The dual_arm_robot_driver package</description>

  <author>Chunting Jiao</author>
  <maintainer email="jiaochunting@gmail.com">Tsinghua University</maintainer>
  <license>Apache 2.0</license>
  <!--
  <url type="website">http://wiki.ros.org/ur_modern_driver</url>
  <url type="bugtracker">https://github.com/ros-industrial/ur_modern_driver/issues</url>
  <url type="repository">https://github.com/ros-industrial/ur_modern_driver</url>
-->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>industrial_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>ur_msgs</depend>
  <depend>tf</depend>
  <depend>std_srvs</depend>

  <exec_depend>force_torque_sensor_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>

</package>